--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h2>オンゲキレート計算機（仮）</h2>
+        目標レート達成に必要なリーセント枠(10曲)の平均レートを計算します。
         <table>
             <tr>
                 <td>目標レートを入力</td><td><input type="number" id="targetrating" min="0" max="1010000"></td>
