--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         <br>
         <output id="out1"></output>
         <br>
+        以下にリーセント枠の単曲レーティングを入力することでさらに詳細な目標を算出することができます。
+        <br>
+        <table>
+            <tr>
+                <td>リーセント枠単曲レーティングを入力</td><td><input type="number" id="recentrating" min="0" max="1010000"></td><td><button id="add">追加</button></td>
+            </tr>
+        </table>
+        <table id="out2"></table>
+        <br>
+        <output id="out3"></output>
+        <br>
+        <button id="reset">リーセント枠リセット</button>
         <br>
         © 2023 股濡れ徒歩部
     </body>
