--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         <br>
         <table>
             <tr>
-                <td>リーセント枠単曲レーティングを入力</td><td><input type="number" id="recentrating" min="0" max="1010000"></td><td><button id="add">追加</button></td>
+                <td>リーセント枠単曲レーティングを入力</td><td><input type="number" id="recentrating" min="0" max="20"></td><td><button id="addrating">追加</button></td>
+            </tr>
+        </table>
+        または
+        <table>
+            <tr>
+                <td>譜面定数を入力</td><td><td><input type="number" id="recentconst" min="0" max="20"></td></td><td>スコアを入力</td><td><input type="number" id="recentscore" min="0" max="1010000"></td><td><button id="addscore">追加</button></td>
             </tr>
         </table>
         <table id="out2"></table>
